--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             /* --- FINAL RESPONSIVE CONTAINER SIZING --- */
 
       .fai-chun.vertical {
-        width: 25rem;             /* A good default size for desktop */
+        width: 12rem;             /* A good default size for desktop */
         max-width: 90vw;          /* Ensures it never overflows the screen */
         aspect-ratio: 480 / 640;  /* CRITICAL: This keeps the original shape */
         border: 8px solid #facc15;/* The border for non-white backgrounds */
@@ -164,7 +164,7 @@
       .fai-chun.horizontal {
         width: 90vw;              /* Use most of the screen width */
         max-width: 70rem;         /* But don't let it get too wide */
-        height: 15rem;            /* A generous height for large characters */
+        height: 8rem;            /* A generous height for large characters */
         border: 8px solid #facc15;/* The border */
         display: flex;
         align-items: center;
@@ -610,12 +610,20 @@
         max-height: 100%;
       }
       #fullscreenContent .fai-chun.vertical {
-        height: 100%;
-        aspect-ratio: 8 / 36;
+        width: 12rem;             /* A good default size for desktop */
+        max-width: 90vw;          /* Ensures it never overflows the screen */
+        aspect-ratio: 480 / 640;  /* CRITICAL: This keeps the original shape */
+        border: 8px solid #facc15;/* The border for non-white backgrounds */
       }
+      
       #fullscreenContent .fai-chun.horizontal {
-        width: 100%;
-        aspect-ratio: 36 / 8;
+        width: 90vw;              /* Use most of the screen width */
+        max-width: 70rem;         /* But don't let it get too wide */
+        height: 8rem;            /* A generous height for large characters */
+        border: 8px solid #facc15;/* The border */
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
       #fullscreenContent .fai-chun.vertical img {
           max-width: 100%;
