--- a/index.html
+++ b/index.html
@@ -1401,6 +1401,7 @@
           savePreviewBtn.addEventListener('click', async (event) => {
               event.stopPropagation(); 
               await savePoster();
+              hidePreview();
               // hidePreview() is now handled inside the savePoster function's finally block
           });
 
